--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -23,6 +23,20 @@ linter:
   rules:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    prefer_typing_uninitialized_variables: false
+    prefer_const_constructors_in_immutables: false
+    prefer_const_constructors: false
+    avoid_print: false
+    prefer_const_literals_to_create_immutables: false
+    library_private_types_in_public_api: false
+    use_key_in_widget_constructors: false
+    annotate_overrides: false
+    avoid_unnecessary_containers: false
+    sort_child_properties_last: false
+    prefer_void_to_null: false
+    prefer_interpolation_to_compose_strings: false
+    sized_box_for_whitespace: false
+    no_leading_underscores_for_local_identifiers: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
