--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_core: ^2.16.0
   firebase_auth:
   cloud_firestore:
+  provider:
 
 
   # The following adds the Cupertino Icons font to your application.
